--- a/ProjectLTestTask/MainWindow.xaml
+++ b/ProjectLTestTask/MainWindow.xaml
@@ -8,10 +8,10 @@
         Title="MainWindow" Height="450" Width="800">
     <Grid DataContext="{Binding Main, Source={StaticResource Locator}}">
         <Label  HorizontalAlignment="Left" Margin="155,91,0,0" VerticalAlignment="Top" Height="29" Width="60"
-               Content="{Binding CurrentVolume.Value}"/>
+               Content="{Binding Volume.CurrentValue}"/>
         <Label  HorizontalAlignment="Left" Margin="155,130,0,0" VerticalAlignment="Top" Height="29" Width="60"
                Content="{Binding ElementName=Time, Path=Value}" />
-        <Slider Name="Time" AutoToolTipPlacement="TopLeft" AutoToolTipPrecision="0" HorizontalAlignment="Left" Margin="32,169,0,0" VerticalAlignment="Top" Height="67" Width="399" Maximum="100" TickFrequency="1" IsSnapToTickEnabled="True"/>
+        <Slider Name="Time" Value="{Binding Volume.LocalValue}" AutoToolTipPlacement="TopLeft" AutoToolTipPrecision="0" HorizontalAlignment="Left" Margin="32,169,0,0" VerticalAlignment="Top" Height="67" Width="399" Maximum="100" TickFrequency="1" IsSnapToTickEnabled="True"/>
         <Button Content="Apply" HorizontalAlignment="Left" Margin="32,213,0,0" VerticalAlignment="Top" Width="111" Height="36"
                 Command="{Binding ApplyCurrentVolumeCommand}" RenderTransformOrigin="0.475,-0.372"/>
         <ListBox HorizontalAlignment="Left" Height="420" Margin="571,0,0,0" VerticalAlignment="Top" Width="213"
